src/tests/snapshots/fern__tests__getopt__getopt_from_argv-2.snap
---
source: src/tests/getopt.rs
expression: opts
---
[
    Short(
        'n',
    ),
    Short(
        'e',
    ),
]
