src/tests/snapshots/fern__tests__getopt__getopt_multiple_short-2.snap
---
source: src/tests/getopt.rs
expression: opts
---
[
    Short(
        'n',
    ),
    Short(
        'r',
    ),
    Short(
        'e',
    ),
]
